--- a/frontend/sampleapp/public/index.html
+++ b/frontend/sampleapp/public/index.html
@@ -6,7 +6,7 @@
     <!-- ✅ Favicon -->
     <link rel="icon" href="%PUBLIC_URL%/Pet_logo.png" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Pet Services - Book and Care for Your Pets" />
 
